--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   cached_network_image:
   progress_hud: ^1.1.0
   dio: 2.1.0
+  fluttertoast: ^3.0.3
 
 dev_dependencies:
   flutter_test:
