--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   progress_hud: ^1.1.0
   dio: 2.1.0
   fluttertoast: ^3.0.3
+  shared_preferences: ^0.4.2
 
 dev_dependencies:
   flutter_test:
