--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   fluttertoast: ^3.0.3
   file_picker: ^1.3.3
   shared_preferences: ^0.4.2
+  image_picker: ^0.5.3+1
 
 
 dev_dependencies:
