--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   file_picker: ^1.3.3
   shared_preferences: ^0.4.2
   image_picker: ^0.5.3+1
+  path_provider: ^0.5.0+1
+
 
 
 dev_dependencies:
