--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,17 @@ dependencies:
   path_provider: ^0.5.0+1
 
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons: "^0.6.1"
+
+flutter_icons:
+  image_path: "images/logo.jpeg" 
+  android: true
+  ios: true
 
 
 # For information on the generic Dart part of this file, see the
